fix: broken dark mode rendering

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -178,3 +178,7 @@
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
+
+#radix- {
+  border: #000;
+}
